--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "recharts": "^3.2.1",
     "remixicon": "^4.8.0",
     "remixicon-react": "^1.0.0",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -38,6 +39,7 @@
     "eslint-config-next": "15.2.4",
     "js-yaml": "^4.1.0",
     "mermaid": "^10.1.0",
+    "pg": "^8.18.0",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.8",
     "typescript": "^5"
