--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "test": "jest",
     "validate-docs": "node scripts/validate-design-docs.js",
     "check-coverage": "node scripts/generate-coverage-report.js"
   },
@@ -32,15 +33,23 @@
     "@eslint/eslintrc": "^3",
     "@mermaid-js/mermaid-cli": "^11.12.0",
     "@tailwindcss/postcss": "^4",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.2",
+    "@testing-library/user-event": "^14.6.1",
+    "@types/jest": "^29",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.2.4",
+    "jest": "^29",
+    "jest-environment-jsdom": "^30.2.0",
     "js-yaml": "^4.1.0",
     "mermaid": "^10.1.0",
+    "node-fetch": "^2.7.0",
     "pg": "^8.18.0",
     "tailwindcss": "^4",
+    "ts-jest": "^29",
     "tw-animate-css": "^1.3.8",
     "typescript": "^5"
   }
