--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@aws-sdk/client-ses": "^3.975.0",
     "@radix-ui/react-slot": "^1.2.3",
     "@supabase/supabase-js": "^2.53.0",
+    "argon2": "^0.44.0",
     "chart.js": "^4.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "jsonwebtoken": "^9.0.0",
     "lucide-react": "^0.525.0",
     "next": "15.2.4",
     "react": "^19.0.0",
@@ -28,8 +30,7 @@
     "remixicon": "^4.8.0",
     "remixicon-react": "^1.0.0",
     "tailwind-merge": "^3.3.1",
-    "zod": "^4.3.6",
-    "jsonwebtoken": "^9.0.0"
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
