--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@eslint/eslintrc": "^3",
     "@mermaid-js/mermaid-cli": "^11.12.0",
     "@playwright/test": "^1.58.2",
+    "@supabase/mcp-server-supabase": "^0.6.3",
     "@tailwindcss/postcss": "^4",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.2",
